--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -10,10 +10,16 @@ body {
     background-color: rgba(18, 18, 18, 1);
 }
 
+.color-displayer {
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    display: inline-block;
+    border:solid 2px;
+    border-radius:1px;
+}
 
 /*modal */
-
-
 .modal {
     font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
 }
