--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -11,8 +11,8 @@ body {
 }
 
 .color-displayer {
-    width: 10px;
-    height: 10px;
+    width: .9rem;
+    height: .9rem;
     background-color: red;
     display: inline-block;
     border:solid 2px;
@@ -74,6 +74,9 @@ body {
 .modal__header .modal__close:before { content: "\2715"; }
 
 .modal__content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     margin-top: 2rem;
     margin-bottom: 2rem;
     line-height: 1.5;
